src/test/deca/syntax/invalid/resultats/test_error_instruction-synt.res
./src/test/deca/syntax/invalid/test_error_instruction.deca:11:31: mismatched input ',' expecting {'+', '-', '*', 'instanceof', '<', '>', '=', '/', '%', '.', ',', ')', '==', '!=', '>=', '<=', '&&', '||'}
